--- a/www/style.css
+++ b/www/style.css
@@ -5,14 +5,15 @@ font-family: courier;
 .mumu{
 background-color: pink;
 }
-#xx {
+#xx {}
+.bluestring{
 color: blue;
 font-family: arial;
 }
 h1 {
 font-size: 250;
+font-size:150%;
 }
 [class=redstring] {
-
 color:red
 }
